<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/item1"
        android:title="@string/menu_str1"/>
    <item
        android:id="@+id/item2"
        android:title="@string/menu_str2"/>
    <item
        android:id="@+id/item3"
        android:title="@string/menu_str3"/>
    <item
        android:id="@+id/item4"
        android:title="@string/menu_str4"/>
    <item
        android:id="@+id/item5"
        android:title="@string/menu_str5"/>
    <item
        android:id="@+id/item6"
        android:title="@string/menu_str6"/>
    <item
        android:id="@+id/item7"
        android:title="@string/menu_str7"/>
    <item
        android:id="@+id/item8"
        android:title="@string/menu_str8"/>
</menu>